[package]
name = "focustrace"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["stack-trace", "backtrace", "panics"]
description = "Small utility to print a backtrace containing only functions called from the current crate on panic."
repository = "https://github.com/cmarkh/focustrace"
readme = "README.md"

[dependencies]
backtrace = "0.3.72"
